--- a/style.css
+++ b/style.css
@@ -18,24 +18,10 @@ nav ul{
 
 nav {
     background: #eee;
-  
-    ul {
-      padding: 0;
-  
-      li {
-        display: inline-block;
-  
-        a {
-          text-decoration: none;
-          color: #333;
-  
-          &:hover {
-            color: crimson;
-          }
-        }
-      }
+    & li {
+        color:#f00
     }
-  }
+}
 
 
 ul > li {
@@ -69,7 +55,7 @@ h3 {
 }
 
 p {
-    color: color-mix(in display-p3, #f00, #00f);
+    color: color-mix(in srgb, #f00, #00f);
     background-color: var(--primary-color, #e74c3c);
     position: static;
     display: grid;
